<resources>
    <string name="app_name" translatable="false">Apex</string>
    <string name="login_text">Login</string>
    <string name="register_header">Register</string>
    <string name="usernameText">Username</string>
    <string name="username_hint">Username*</string>
    <string name="passwordText">Password</string>
    <string name="password_hint">Password*</string>
    <string name="emailText">Email</string>
    <string name="email_hint">Email*</string>
    <string name="loginButton">LOG IN</string>
    <string name="registerButton">SIGN IN</string>
    <string name="singUpText1">Don`t have account?</string>
    <string name="singUpText2">Sign Up</string>
    <string name="footer_driver">Drivers</string>
    <string name="footer_teams">Teams</string>
    <string name="footer_schedule">Schedule</string>
    <string name="footer_homePage">Home</string>
    <string name="footer_account">Account</string>
    <string name="country">Country:</string>
    <string name="pole_position">Pole position</string>
    <string name="team">Team</string>
    <string name="save_race">Save Race</string>
    <string name="settings">Settings</string>
    <string name="saved_race">Saved Races</string>
    <string name="logout">Logout</string>
    <string name="logout_text">Logout!</string>
    <string name="teams_header">Teams standings</string>
    <string name="drivers_header">Driver standings</string>
    <string name="wins">Wins</string>
    <string name="podiums">Podiums</string>
    <string name="delete_race">Delete From Saved</string>
    <string name="save_button_text">Save changes</string>
    <string name="first_entry">First entry</string>
    <string name="round">round</string>
    <string name="first_driver" translatable="false">first_driver</string>
    <string name="second_driver" translatable="false">second_driver</string>
    <string name="teamlogo" translatable="false">teamLogo</string>
    <string name="carimage" translatable="false">carImage</string>
    <string name="driverimage" translatable="false">driverImage</string>
    <string name="driver_choice_hint">Choose your favourite driver (optional):</string>
    <string name="driver_choice_text">Change your favourite driver:</string>
    <string name="choiceTeam_hint">Choose your favourite team (optional):</string>
    <string name="choiceTeam_text">Change your favourite team:</string>
    <string name="hint_email_new">New email:</string>
    <string name="hint_password_new">New password:</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="dash" translatable="false">-</string>
    <string name="is_ongoing">is ongoing</string>
    <string name="favourite_team">favourite team</string>
    <string name="favorite_team_has_not_yet_been_chosen">Favorite team has not yet been chosen</string>
    <string name="favourite_driver">favourite driver</string>
    <string name="favorite_driver_has_not_yet_been_chosen">Favorite driver has not yet been chosen</string>
    <string name="front_arrow" translatable="false">front_arrow</string>
    <string name="team_car" translatable="false">team_car</string>
    <string name="back_arrow" translatable="false">back_arrow</string>
    <string name="team_logo" translatable="false">team_logo</string>
    <string name="change_private_data">Change private data</string>
    <string name="delete_account">Delete account</string>
    <string name="home_page">apex</string>
    <string name="private_logo" translatable="false">private_logo</string>
    <string name="change_private_data_info">To change private data put your new values into field and login to your account to save changes</string>
    <string name="back">back</string>
    <string name="empty_race_list_header">CHECK \nBACK HERE</string>
    <string name="empty_race_list_concluded">Come back after first race to get all of the results</string>
    <string name="race_podium_text">Race Podium</string>
    <string name="_2nd_place_header">2nd place</string>
    <string name="_1st_place_header">Winner</string>
    <string name="_3rd_place_header">3rd place</string>
    <string name="_2nd_place_driver_image" translatable="false">2nd_place_driver_image</string>
    <string name="_1st_place_driver_image" translatable="false">1st_place_driver_image</string>
    <string name="_3rd_place_driver_image" translatable="false">3rd_place_driver_image</string>
    <string name="view_results">Results</string>
    <string name="race_weekend_text">WEEKEND STRUCTURE</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_info">Are you sure you want to delete your account?\nThat`s irretrievable</string>
    <string name="cancel">Cancel</string>
    <string name="delete_button_text">delete</string>
    <string name="driver_results">Driver results</string>
    <string name="_2025_season">2025 Season</string>
    <string name="_2024_season">2024 Season</string>
    <string name="_2026_season">2026 Season</string>
    <string name="race_name_header">Race name</string>
    <string name="result_header">Result</string>
    <string name="key_map">Key Map</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="bronze">Bronze</string>
    <string name="green">Green</string>
    <string name="points_finish">Finished in the points</string>
    <string name="purple">Purple</string>
    <string name="out_of_points_finish">Finished out of the points</string>
    <string name="pink">Pink</string>
    <string name="retired">Retired (Ret)</string>
    <string name="white">White</string>
    <string name="dns">Did not start (DNS)</string>
    <string name="black">Black</string>
    <string name="dsq">Disqualified (DSQ)</string>
    <string name="blank">Blank</string>
    <string name="wd">Withdrawn (WD)</string>
    <string name="format">Format</string>
    <string name="meaning">Meaning</string>
    <string name="cnd">Grand-Prix canceled (CND)</string>
    <string name="bold_purple">Bold purple</string>
    <string name="statistics_since_debut">Statistics since debut</string>
    <string name="gps_entered">GPs Entered</string>
    <string name="poles">Poles</string>
    <string name="fastest_laps">Fastest Laps</string>
    <string name="points_earned">Points earned</string>
    <string name="drivers_championships">Drivers` Championships</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="empty_race_list_future">Come back in a new season to get a new schedule and all of the results</string>
    <string name="grand_prix_weekend">grand prix weekend</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="dialog_login">please login</string>
    <string name="dialog_login_info">We need to verify that this is your account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password_button">reset password</string>
    <string name="reset_password_info">Provide your account`s email for which you want to reset your password</string>
    <string name="reset_password_header">forgot password</string>
    <string name="flag_image" translatable="false">flag_image</string>
    <string name="circuit_length">Circuit length</string>
    <string name="kilometres">km</string>
    <string name="no_of_laps">No. of laps</string>
    <string name="race_distance">Race distance</string>
    <string name="first_grand_prix">First Grand Prix</string>
    <string name="lap_record">Lap record</string>
    <string name="pos_header">POS</string>
    <string name="driver_header">DRIVER</string>
    <string name="q1_header" translatable="false">q1</string>
    <string name="q3_header" translatable="false">Q3</string>
    <string name="q2_header" translatable="false">Q2</string>
    <string name="sq1_header" translatable="false">sq1</string>
    <string name="sq3_header" translatable="false">sQ3</string>
    <string name="sq2_header" translatable="false">sQ2</string>
    <string name="fastest_lap_header">Fastest Lap</string>
    <string name="race_status_header">TIME/RET</string>
    <string name="pts_header">PTS</string>
    <string name="empty_saved_race_info">Save the race for pocket access to its results!</string>
    <string name="race_schudule_header">Race schudule</string>
    <string name="confirm_logout_header">Confirm Logout</string>
    <string name="confirm_logout_info">Are you sure you want to logout?</string>
    <string name="confirm_button">confirm</string>
    <string name="team_results">Team results</string>
    <string name="full_team_name">Full Team Name</string>
    <string name="enter_year">Enter year</string>
    <string name="constructors_championships">Constructors` Championships</string>
    <string name="team_lineup">team lineup</string>
    <string name="technical_information">Technical Information</string>
    <string name="base">Base</string>
    <string name="team_chief">Team Chief</string>
    <string name="technical_chief">Technical Chief</string>
    <string name="chassis">Chassis</string>
    <string name="power_unit">Power Unit</string>
    <string name="stats_text">Stats</string>
    <string name="results_text">Results</string>
    <string name="upcoming_text">Upcoming</string>
    <string name="concluded_text">Concluded</string>
    <string name="schedule_text">Schedule</string>
    <string name="circuit_text">Circuit</string>
    <string name="race_text">Race</string>
    <string name="quali_text">Quali</string>
    <string name="sprint_text">Sprint</string>
    <string name="seconds_text">S</string>
    <string name="cnd_text">CND</string>
    <string name="dns_text">DNS</string>
    <string name="dnf_text">DNF</string>
    <string name="nc_text">NC</string>
    <string name="np_text">NP</string>
    <string name="ret_text">RET</string>
    <string name="wd_text">WD</string>
    <string name="dsq_text">DSQ</string>
    <string name="n_c_text">N/C</string>
    <string name="dsq_pos_text">D</string>
    <string name="race_event_text">Race</string>
    <string name="first_practice_event_text">Practice 1</string>
    <string name="second_practice_event_text">Practice 2</string>
    <string name="third_practice_event_text">Practice 3</string>
    <string name="quali_event_text">Qualifying</string>
    <string name="sprint_event_text">Sprint</string>
    <string name="sprint_quali_event_text">Sprint Qualifying</string>
    <string name="prev_race_results_text">Race Results</string>
    <string name="saved_race_text">Saved: \n</string>
    <string name="fan_of_text">Fan Of</string>
    <string name="no_fan_of_text">Has no favourite driver and team</string>
    <string name="nobody">Nobody</string>
    <string name="reqistration_succ_text">Registration successful!</string>
    <string name="reqistration_fail_text">Registration failed! Please try again later.</string>
    <string name="all_fields_text">All fields must be filled!</string>
    <string name="invalid_email_text">Invalid email</string>
    <string name="invalid_password_text">Password must has at least 6 symbols</string>
    <string name="invalid_username_text">This username is already taken</string>
    <string name="login_succ_text">Login successful!</string>
    <string name="empty_credentials_text">Please enter credentials</string>
    <string name="delete_account_text">Your account has been deleted.</string>
    <string name="smth_wrong_text">Something went wrong. Please try again later.</string>
    <string name="auth_fail_text">Authentication Failed. Wrong username or password</string>
    <string name="lost_connection">lost connection</string>
    <string name="lost_connection_info">Check your internet connection and try again</string>
    <string name="try_again_button">try again</string>
</resources>