<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/FooterStyle"
    android:id="@+id/footer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_alignParentBottom="true"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:orientation="horizontal"
    android:weightSum="5">
    <Button
        android:id="@+id/showHomePage"
        android:drawableTop="@drawable/home_off"
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/footerButtonOff"
        android:text="@string/footer_homePage"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/showDriver"
        android:drawableTop="@drawable/drivers_off"
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/footerButtonOff"
        android:text="@string/footer_driver"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/showTeams"
        android:drawableTop="@drawable/constructor_off"
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/footerButtonOff"
        android:text="@string/footer_teams"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/showStandingsDriver"
        android:drawableTop="@drawable/schudule_off"
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/footerButtonOff"
        android:text="@string/footer_schedule"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/showAccount"
        android:drawableTop="@drawable/account_on"
        android:layout_width="0dp"
        android:layout_weight="1"
        style="@style/footerButtonOn"
        android:layout_height="wrap_content"
        android:text="@string/footer_account"/>
</LinearLayout>