<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_above="@id/lostConnectionHeader"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/lostConnection_image"
        android:contentDescription="@string/private_logo"
        android:src="@drawable/lost_connection"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_above="@id/lostConnectionInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lostConnectionHeader"
        android:textAllCaps="true"
        android:gravity="center"
        android:text="@string/lost_connection"
        android:textAppearance="@style/TextStyle.GoodTiming.Bold.ForHeader"/>
    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lostConnectionInfo"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/lost_connection_info"
        android:textSize="20sp"
        android:textAppearance="@style/TextStyle.Gram.Regular"/>
    <Button
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:textAppearance="@style/TextStyle.GoodTiming.Bold.ForHeader"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tryAgainButton"
        android:text="@string/try_again_button"
        android:textAllCaps="true"
        android:backgroundTint="@color/black"
        android:layout_below="@id/lostConnectionInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        style="@style/ButtonStyle"/>
</RelativeLayout>