<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".registerPageActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_above="@id/resetHeader"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/lock_image"
        android:contentDescription="@string/private_logo"
        android:src="@drawable/lock_vector"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_above="@id/resetInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetHeader"
        android:textAllCaps="true"
        android:gravity="center"
        android:text="@string/reset_password_header"
        android:textAppearance="@style/TextStyle.GoodTiming.Bold.ForHeader"/>
    <TextView
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_above="@id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetInfo"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/reset_password_info"
        android:textSize="20sp"
        android:textAppearance="@style/TextStyle.Gram.Regular"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"
        android:theme="@style/StyledTilEditTextTheme"
        app:errorTextAppearance="@style/TextStyle.Gram.Regular.Simple"
        app:errorTextColor="@color/red"
        app:hintTextAppearance="@style/TextStyle.Gram.Regular.Simple"
        app:hintTextColor="@color/black"
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintEnabled="true"
        android:hint="@string/emailText">
        <com.google.android.material.textfield.TextInputEditText
            android:textAppearance="@style/TextStyle.Gram.Regular.Countdown"
            android:theme="@style/StyledTilEditTextTheme"
            android:inputType="textEmailAddress"
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <FrameLayout
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/email_layout"
        android:id="@+id/resetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:backgroundTint="@color/red"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:id="@+id/resetProgress"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/red"/>
        <Button
            android:textAppearance="@style/TextStyle.GoodTiming.Bold.ForHeader"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resetPassword"
            android:text="@string/reset_password_button"
            android:textAllCaps="true"
            style="@style/ButtonStyle"/>
    </FrameLayout>
    <Button
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textAppearance="@style/TextStyle.GoodTiming.Bold.ForHeader"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:text="@string/back"
        android:paddingStart="30dp"
        android:paddingEnd="50dp"
        android:drawableStart="@drawable/back_arrow"
        android:textAllCaps="true"
        android:backgroundTint="@color/dark_grey"
        android:layout_below="@id/resetLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        style="@style/ButtonStyle"/>
</RelativeLayout>