<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogInActivity"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:paddingTop="15dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:weightSum="9"
        android:background="@color/pink">
        <ImageButton
            android:id='@+id/backButton'
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/back_arrow"
            android:background="@color/pink"/>
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:id="@+id/teamsHeader"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:text="@string/log_in_page_header"
            android:gravity="center_vertical"
            android:background="@color/pink"
            android:layout_height="match_parent" />
    </LinearLayout>
    <ScrollView
        android:layout_weight="1"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <RelativeLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="70dp"
                android:id="@+id/loginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:text="@string/login_text"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginTitle"
                android:paddingStart="30dp"
                android:text="@string/usernameText"
                android:textAlignment="gravity" />
            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameText"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/username_hint"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
            <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginUsername"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/passwordText"
                android:textAlignment="gravity" />
            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordText"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>
            <ProgressBar
                android:id="@+id/loginProgress"
                android:layout_below="@id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:visibility="gone"/>
            <Button
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:text="@string/loginButton"
                android:layout_below="@id/loginPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                style="@style/ButtonStyle"/>
            <TextView
                android:id="@+id/signUpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginButton"
                android:layout_marginTop="10dp"
                android:text="@string/singUpText"
                android:textAlignment="center" />
        </RelativeLayout>
    </ScrollView>
    <include layout="@layout/footer_account"/>
</LinearLayout>