<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp">
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/logout_header"
            android:text="@string/confirm_logout_header"
            android:textAppearance="@style/TextStyle.GoodTiming.Bold.ForHeader" />
        <TextView
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/logout_text"
            android:layout_below="@id/logout_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_logout_info"
            android:textAppearance="@style/TextStyle.Gram.Regular.Simple"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/logout_text"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <Button
                android:id="@+id/cancel_button"
                style="@style/declineButtonStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:elevation="0dp"
                android:text="@string/cancel"
                android:textAppearance="@style/TextStyle.GoodTiming.Regular"
                android:textColor="@color/dark_grey"
                android:textSize="14sp" />
            <Button
                android:layout_weight="1"
                android:textAppearance="@style/TextStyle.GoodTiming.Regular"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:elevation="0dp"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_height="30dp"
                android:id="@+id/confirm_button"
                android:textAllCaps="true"
                android:text="@string/confirm_button"
                android:backgroundTint="@color/dark_grey"
                style="@style/ButtonStyle"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>